--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,9 @@
       "name": "Python: Módulo",
       "type": "python",
       "request": "launch",
+      "args": ["-B"],
       "module": "raphi",
-      "justMyCode": true
+      "justMyCode": false
     }
   ]
 }
